--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  get_it: ^7.7.0
+  # Bloc for state management
+  flutter_bloc: ^8.1.6
+  # Value equality
+  equatable: ^2.0.5
+  # Functional programming thingies
+  dartz: ^0.10.1
+  # Remote API
+  connectivity: ^3.0.6
+  http: ^1.2.2
+  # Local cache
+  shared_preferences: ^2.2.3
+  build_runner: ^2.4.9
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +58,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
