--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   # Local cache
   shared_preferences: ^2.2.3
   build_runner: ^2.4.9
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
