added for task 17

--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   build_runner: ^2.4.9
   internet_connection_checker: ^1.0.0+1
   bloc: ^8.1.4
+  rxdart: ^0.28.0
+  bloc_test: ^9.1.7
 
 dev_dependencies:
   flutter_test:
