--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   bloc: ^8.1.4
   rxdart: ^0.28.0
   bloc_test: ^9.1.7
+  intl: ^0.19.0
+  google_fonts: ^6.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -77,9 +80,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/son.jpg
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
