--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   intl: ^0.19.0
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -80,8 +81,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/son.jpg
+  
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
