feat: finish task 22 README.md

--- a/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
+++ b/mobile/eComerce_linter_clean_archtecture/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   mocktail: ^1.0.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
